--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-multi-lang": "^1.0.7",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "recost": "^0.2.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -35,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.9",
+    "@types/react-router-dom": "^5.1.3"
   }
 }
