--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-multi-lang": "^1.0.7",
+    "react-multi-lang": "file:../react-multi-lang",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "recost": "^0.2.0",
+    "recost": "file:../recost",
+    "recost-logger": "^0.1.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
