--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.9",
     "@types/react-router-dom": "^5.1.3",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "path-match": "^1.2.4"
   }
 }
