--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "react-backoffice",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.19.3",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
     "classnames": "^2.2.6",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-multi-lang": "file:../react-multi-lang",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "recost": "file:../recost",
+    "node-sass": "^4.14.1",
+    "path-match": "^1.2.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-multi-lang": "^2.1.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "recost": "^1.0.1",
     "recost-logger": "^0.1.2",
-    "typescript": "~3.7.2"
+    "typescript": "^4.0.5",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +33,10 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -41,11 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/classnames": "^2.2.9",
-    "@types/react-router-dom": "^5.1.3",
-    "node-sass": "^4.13.1",
-    "path-match": "^1.2.4"
   }
 }
