--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,9 @@ on:
       - master
 
 env:
-  REACT_APP_API_URL: https://joaogsleite.github.io/react-backoffice/api
+  REACT_APP_API_URL: http://localhost:3004
   PUBLIC_URL: /react-backoffice/
+  REACT_APP_PUBLIC_URL: /react-backoffice/
 
 jobs:
   build:
